Fixed widths and alignment on book conditions

--- a/client/src/components/BookInfo/book-data.css
+++ b/client/src/components/BookInfo/book-data.css
@@ -378,7 +378,7 @@ h2:nth-child(2)  {
     border:solid 1px #212121;
     padding: 5% 5% 5% 5%;
     height: 58%;
-    width: 100%;
+    width: 83%;
     left: 20%;
     text-transform: uppercase;
     background-color: whitesmoke;
@@ -400,7 +400,7 @@ h2:nth-child(2)  {
     color: white;
     padding: 5% 5% 5% 5%;
     height: 58%;
-    width: 68%;
+    width: 80%;
     left: 15%;
     text-transform: uppercase;
     background-color: rgb(255, 0, 0);
@@ -504,7 +504,7 @@ h2:nth-child(2)  {
         padding: 5% 5% 5% 5%;
         height: 60%;
         width: 55px;
-        left: 35px;
+        left: 45px;
         text-transform: uppercase;
         background-color: rgb(0, 4, 255);
         
@@ -515,7 +515,7 @@ h2:nth-child(2)  {
         padding: 5% 5% 5% 5%;
         height: 58%;
         width: 55px;
-        left: 35px;
+        left: 45px;
         text-transform: uppercase;
         background-color: rgb(255, 0, 0);
         
@@ -539,10 +539,10 @@ h2:nth-child(2)  {
         height: 110vh;
     }
 
-    .itemImage {
+    /* .itemImage {
         height: 100px;
         width: 70px;
-    }
+    } */
 
     .bookInfoLeftContent{
         position: relative;
@@ -580,7 +580,7 @@ h2:nth-child(2)  {
 
     .bookPrice h5{
         font-size: 50px;
-        left: 30px;
+        left: 45px;
     }
     
     .userContactDesktop {
@@ -600,7 +600,7 @@ h2:nth-child(2)  {
         padding: 5% 5% 5% 5%;
         height: 65%;
         width: 90px;
-        left: 30px;
+        left: 55px;
         text-transform: uppercase;
         background-color: black;
         
@@ -612,7 +612,7 @@ h2:nth-child(2)  {
         padding: 5% 5% 5% 5%;
         height: 58%;
         width: 53%;
-        left: 35px;
+        left: 65px;
         text-transform: uppercase;
         background-color: whitesmoke;
         
@@ -623,7 +623,7 @@ h2:nth-child(2)  {
         padding: 5% 5% 5% 5%;
         height: 60%;
         width: 60px;
-        left: 35px;
+        left: 70px;
         text-transform: uppercase;
         background-color: rgb(0, 4, 255);
         
@@ -645,7 +645,7 @@ h2:nth-child(2)  {
         padding: 5% 5% 5% 6%;
         height: 55%;
         width: 83px;
-        left: 30px;
+        left: 50px;
         top: 10%;
         text-transform: uppercase;
         background-color: rgb(7, 193, 14);
@@ -656,10 +656,10 @@ h2:nth-child(2)  {
 @media (min-width: 1000px) {
 
     
-    .itemImage {
+    /* .itemImage {
         height: 100px;
         width: 90px;
-    }
+    } */
 
     .bookInfoLeftContent{
         position: relative;
@@ -819,7 +819,7 @@ h2:nth-child(2)  {
         padding: 5% 5% 5% 5%;
         height: 65%;
         width: 90px;
-        left: 35px;
+        left: 50px;
         text-transform: uppercase;
         background-color: black;
         
@@ -831,7 +831,7 @@ h2:nth-child(2)  {
         padding: 5% 5% 5% 5%;
         height: 58%;
         width: 45px;
-        left: 40px;
+        left: 65px;
         text-transform: uppercase;
         background-color: whitesmoke;
         
@@ -842,7 +842,7 @@ h2:nth-child(2)  {
         padding: 5% 5% 5% 5%;
         height: 60%;
         width: 55px;
-        left: 40px;
+        left: 65px;
         text-transform: uppercase;
         background-color: rgb(0, 4, 255);
         
@@ -853,7 +853,7 @@ h2:nth-child(2)  {
         padding: 5% 5% 5% 5%;
         height: 58%;
         width: 55px;
-        left: 40px;
+        left: 65px;
         text-transform: uppercase;
         background-color: rgb(255, 0, 0);
         
@@ -864,7 +864,7 @@ h2:nth-child(2)  {
         padding: 5% 5% 5% 6%;
         height: 55%;
         width: 90px;
-        left: 35px;
+        left: 50px;
         top: 10%;
         text-transform: uppercase;
         background-color: rgb(7, 193, 14);
@@ -874,10 +874,10 @@ h2:nth-child(2)  {
 
 @media (min-width: 1281px) {
 
-    .itemImage {
+    /* .itemImage {
         height: 110px;
         width: 90px;
-    }
+    } */
     #book-content {
         height: 58%;
     }
@@ -912,8 +912,8 @@ h2:nth-child(2)  {
         color: white;
         padding: 5% 5% 5% 5%;
         height: 65%;
-        width: 70%;
-        left: 10%;
+        width: 90px;
+        left: 55px;
         text-transform: uppercase;
         background-color: black;
         
@@ -925,7 +925,7 @@ h2:nth-child(2)  {
         padding: 5% 5% 5% 5%;
         height: 58%;
         width: 42%;
-        left: 20%;
+        left: 75px;
         text-transform: uppercase;
         background-color: whitesmoke;
         
@@ -935,8 +935,8 @@ h2:nth-child(2)  {
         color: white;
         padding: 5% 5% 5% 5%;
         height: 60%;
-        width: 43%;
-        left: 15%;
+        width: 48%;
+        left: 75px;
         text-transform: uppercase;
         background-color: rgb(0, 4, 255);
         
@@ -946,8 +946,8 @@ h2:nth-child(2)  {
         color: white;
         padding: 5% 5% 5% 5%;
         height: 58%;
-        width: 40%;
-        left: 15%;
+        width: 60px;
+        left: 70px;
         text-transform: uppercase;
         background-color: rgb(255, 0, 0);
         
@@ -957,8 +957,8 @@ h2:nth-child(2)  {
         position: relative;
         padding: 5% 5% 5% 6%;
         height: 55%;
-        width:68%;
-        left: 15%;
+        width:83px;
+        left: 55px;
         top: 10%;
         text-transform: uppercase;
         background-color: rgb(7, 193, 14);
